generated/checkers/gen/AllGen-Misuse-da1983355ccefcfb3f8eb410fff82e250fa87e39/build_logs/syntax-repair-08/build_stderr_2.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘const clang::FieldDecl* {anonymous}::SAGenTestChecker::getCountedByField(const clang::FieldDecl*) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:97:51: error: cannot convert ‘clang::IdentifierInfo*’ to ‘const clang::FieldDecl*’ in initialization
   97 |     if (const FieldDecl *FD = A->getCountedByField())
      |                               ~~~~~~~~~~~~~~~~~~~~^~
      |                                                   |
      |                                                   clang::IdentifierInfo*
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPreCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:257:24: error: ‘class clang::ento::SValBuilder’ has no member named ‘getLValueField’
  257 |   SVal CountLVal = SVB.getLValueField(CountFD, BaseLoc);
      |                        ^~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
